# ezplugins

./: .gitignore  .gitlab-ci.yml  .pylintrc  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: conf.py  ezplugins.rst  index.rst  quickstart.rst
ezplugins/: __init__.py  decorators.py  exceptions.py  manager.py  plugin.py  plugin_method.py  plugin_module.py
tests/: base.py
tests/t10_basic/: test_init_only.py  test_package.py
tests/t10_basic/plugins/: non_plugin.py  plugin2.py  plugin3_plus_4.py  plugin5_alias.py  plugin6a_alias.py  plugin6b_alias.py  plugin7_method_order.py  plugin8_call_parameters.py
tests/t10_basic/plugins/subplugin/: subplugin1.py
tests/t10_basic/plugins/subplugin_init/: __init__.py
tests/t10_basic/plugins/subplugin_invalid/: invalidsubplugin.py
tests/t10_basic/plugins/subsubplugin/thesubsubplugin/: subsubplugin1.py
tests/t20_exceptions/: test_load_exceptions.py  test_load_exceptions_ignore_errors.py  test_plugin_call_exception.py  test_plugin_package_no_exist.py
tests/t20_exceptions/plugins_call_exception/: plugin1.py  plugin2.py
tests/t20_exceptions/plugins_load_exceptions/: plugin1.py
tests/t20_exceptions/plugins_load_exceptions/subplugins_init_exception/: __init__.py  subplugin1.py
tests/t20_exceptions/plugins_load_exceptions/subplugins_invalid_decorator/: subplugin1.py
tests/t30_modules/: test_load_module.py  test_load_modules.py  test_load_modules_ignore_errors.py
tests/t30_modules/plugins/: __init__.py  plugin1.py
tests/t30_modules/plugins_blank/: __init__.py
